--- a/scss/style.scss
+++ b/scss/style.scss
@@ -927,6 +927,49 @@ body.bodySilver {
         background: #E9E6CC;
     }
 }
+.video_slider_wrap {
+    width: 100%;
+    overflow: hidden;
+    p {
+        max-width: 944px;
+        width: 100%;
+        font-family: 'TT Norms Pro Mono Trl', sans-serif;
+        font-weight: 200;
+        font-size: 16px;
+        line-height: 24px;
+        letter-spacing: 0%;
+        text-align: center;
+        vertical-align: middle;
+        text-align: center;
+        margin: 0 auto;
+        margin-top: 24px;
+        color: var(--White-50, rgba(255, 255, 255, 0.5));
+    }
+}
+.video_slider {
+    max-width: 1264px;
+    width: 100%;
+    margin: 0 auto;
+    .slick-list {
+        overflow: visible;
+    }
+    .wrap {
+        margin: 0 16px;
+    }
+    .block {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 688px;
+        overflow: hidden;
+        border-radius: 16px;
+        video {
+            width: 100%;
+            height: auto;
+        }
+    }
+}
 
 // media
 @media screen and (max-width: 1700px) {
