mobile edit slider

--- a/css/style.css
+++ b/css/style.css
@@ -1064,6 +1064,20 @@ body.bodySilver .aside__logo {
   body.mobileHidden {
     overflow: hidden;
   }
+  .video_slider {
+    max-width: 90%;
+  }
+  .video_slider .wrap {
+    margin: 0 4px;
+  }
+  .video_slider .block {
+    height: 220px;
+    border-radius: 8px;
+  }
+  .video_slider .block video {
+    width: auto;
+    height: 100%;
+  }
   .aside {
     max-width: 100%;
     left: -100%;
